--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <a href="/skills">Skills List</a>
     <p>Welcome to <%= title %></p>
   </body>
 </html>
