--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -13,8 +13,9 @@
       
       <% skills.forEach(function(skill) { %>
         <li>
-          <form action="/skills/<%= skill.id  %>?method=DELETE"
-            class="delete-form" method="POST">
+          <form action="/skills/<%= skill.id  %>?_method=DELETE"
+            class="delete-form" 
+            method="POST" >
             <button type="submit">X</button>
           </form>
           <a href="/skills/<%= skill.id %>"><%= skill.skill %></a>
